feat: local changes — payOS integration, order flow, branch/product enhancements
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>